@@ -1,3 +1,14 @@
+2007-02-01  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/fc4.py:  Fix tracebacks in subclass __str__
+	methods (#226734).
+	* pykickstart/commands/rhel4.py:  Likewise.
+
+2007-01-31  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart.spec:  Modified to more closely match the extras
+	packaging guidelines.
+
 2007-01-25  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  New version.
